# GenAI

./: pyproject.toml  requirements.txt
RAG/: create-db.py  main.py
RAG/document-loaders/: notes.txt  pdf.py  test.py  web-page.py
RAG/retrivers/: MMR.py  arxive.py  multiQ.py
chatmodels/: UIChatbot.py  chat.py  chatbot.py  huggingface.py
chroma_db/: chroma.sqlite3
embeddingmodels/: embeddings.py  huggingface_embedding.py
vector-store/: db.py
