[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.4",
    "mistralai>=2.4.9",
    "python-dotenv>=1.2.2",
]
